[package]
name = "tui-va-tree-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [patch.crates-io]

[dependencies]
color-eyre = "0.6.2"
tui  = "0.19.0"
tui-textarea  = "0.1.6"
linked-hash-map = "0.5.6"

log = { version = "0.4", features = ["std"] }

