[package]
name = "tui-va-tree-edit"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"
authors = ["Volkalex28 <anan20000228@gmail.com>"]
description = """
    tui-va-tree-edit is a editor and data display in tree style for tui-rs. 
    The tree editor can be easily integrated into your TUI application.
"""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Volkalex28/tui_va_tree_edit#readme"
repository = "https://github.com/Volkalex28/tui_va_tree_edit"
readme = "README.md"
categories = ["gui", "text-editors"]
keywords = ["tui", "tree", "input", "edit"]
include = [
    "/src",
    "/README.md",
    "/LICENSE_MIT",
    "/LICENSE_APACHE",
]

[dependencies]
color-eyre = "0.6"
tui  = "0.19"
tui-textarea  = "0.1"
linked-hash-map = "0.5"
log = { version = "0.4", features = ["std"] }

